Fix dark mode

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -1,6 +1,6 @@
-$brand-primary: #f60;
+$brand-primary: #ff5138;
 $input-border-focus: $brand-primary;
-$body-bg: #f7f7f7;
+$body-bg: #fafafa;
 $font-family-sans-serif: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
 $navbar-default-bg: $brand-primary;
 $navbar-default-link-color: #6e7276;
@@ -9,3 +9,5 @@ $navbar-default-link-active-color: $brand-primary;
 
 $navbar-default-toggle-icon-bar-bg: #fff;
 $navbar-default-toggle-border-color: #fff;
+
+$line-height: 1.5;
