--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -85,6 +85,7 @@ html {
 body {
   padding-top: 50px;
   height: 100%;
+  line-height: $line-height;
 }
 
 a {
